Fixed z-index (#169)

--- a/frontend/sass/layout/_sidebar.scss
+++ b/frontend/sass/layout/_sidebar.scss
@@ -87,7 +87,7 @@
     }
 }
 #sidebar_handle_actions {
-    z-index: 2;
+    z-index: 1;
     width: 200px;
     margin-left: 550px;
     background-color: $white;
